--- a/index.html
+++ b/index.html
@@ -510,7 +510,7 @@
                 <figure>
                   <img class="img-headshot" src="assets/img/headshots/zion.png" />
                   <h3>Zion Abraham</h3>
-                  <figcaption>Operations Director</figcaption>
+                  <figcaption>Co-Founder & Operations Director</figcaption>
                   <div class="medias">
                     <a href="mailto:zion.george.abraham@gmail.com" class="social"><i aria-hidden="true" class="fa fa-envelope"></i></a>
                     <a href="https://www.linkedin.com/in/ziongeorgeabraham/" class="social" target="_blank"><i aria-hidden="true" class="fa fa-linkedin-square"></i></a>
