--- a/index.html
+++ b/index.html
@@ -662,7 +662,7 @@
                 <figure>
                   <img class="img-headshot" src="assets/img/headshots/speakersjudges/latha.jpg" />
                   <h3>Latha Narayanan</h3>
-                  <figcaption>AVP, NetScout Systems & CEO, Shooting Stars FoundationShooting Stars Foundation,Inc</figcaption>
+                  <figcaption>AVP, NetScout Systems & CEO, Shooting Stars Foundation,Inc</figcaption>
                 </figure>
               </div>
 
