--- a/index.html
+++ b/index.html
@@ -80,9 +80,53 @@
     <div class="row">
       <div class="container-fluid">
 	<div class="row">
-	   <div class="col-lg-12" style="text-align: center !important">
-              <a href="https://form.jotform.com/80678994784178?howDid13=https://teenhacks.org" class="btn btn-default btn-lg"><i class="fa fa-eye fa-fw" aria-hidden="true"></i> <span class="network-name">DONATE FOR EDUCATION? CLICK HERE!</span></a>
-           </div>
+	  <script src="https://www.publicalbum.org/js/pa-embed-player.min.js" async></script>
+<div class="pa-embed-player" style="width:100%; height:480px; display:none;"
+  data-link="https://photos.app.goo.gl/JuASHd484fHzMZTq6"
+  data-title="TeenHacks-2018"
+  data-descrition="38 new photos · Album by TeenTech Hacks">
+  <!-- 38 images -->
+  <img data-src="https://lh3.googleusercontent.com/f2kOg3jbM97wdoDhaHQAJZ6Jrix1tPQ3qREPi4zJFg2eDmn5ayfV8mgMfSUdQe_V3B2Oc8PMsX_AR5ui5FMuOFg_UQiU30qZYFI7NQarnH70_pWd3jXHVbk4DusIlrubqpEWNUIdnA=w3124-h1604" src="" alt="" />
+  <img data-src="https://lh3.googleusercontent.com/kZ8m0NeLRnarUXacZ0Eddu-Rcr4U0NTs_U8peo2SIRaF0PvQguxkImyz7028kvIru6VrnDHtYRfvsDVAHicyDKflbIBrug5XMc5DImHSm7RSkG0iBMdoS-bmAo2-nQlYS8hJ_nydkA=w4032-h3024" src="" alt="" />
+  <img data-src="https://lh3.googleusercontent.com/G440HtvdzMgIrxV2i_16bHDCCMe3IYD5q2oJgeDkX-JreKnIXiMtZ7ohtzj9ouZyX_FM4Ja4xi0RN8FKfYrS5-R3VvN2nHu0DkF80NVDgZGQ4I-z6FtdI58M1w5QAFhVtt8n0bYVVA=w4032-h3024" src="" alt="" />
+  <img data-src="https://lh3.googleusercontent.com/jKmZ9Y0V2gkUaLIcXgyw-Wolq2tO6hHyJ-fVErmGEVcQ0zmSBUWymXA6NhVkX-N30vHrG_lHmUlaz3vHSGp9JIbdLhzovy0psQVRooga1RLcMxZSho6J8W5-3KLh1xQ5mGkGqN4skg=w4032-h3024" src="" alt="" />
+  <img data-src="https://lh3.googleusercontent.com/Ygppss3iZJZD9eIAm358qolJ7uQNjCwU3F8nId9nyuothTKuXe-hw32g5m9hujLM2lWp2L56XJsunJMAPLybnuAVLU4ZMsc7yqZfQFCScZuOf2-q5OZal3kjdt-G9M1i-o1f3b9ZpQ=w4032-h3024" src="" alt="" />
+  <img data-src="https://lh3.googleusercontent.com/OlUrYdgzZtSmH1MHA02oyWqUCpS-K2-fU6dK9Sq-4JBIHuUbzw_yUnUBcyAJqkvGXzYCQCUtrY-0YNStToQRNKSl4ZAXyGRu7AP55gLdFpe1mJjG8Gad5leLh_rSz2mCTNqNJVRhvQ=w4032-h3024" src="" alt="" />
+  <img data-src="https://lh3.googleusercontent.com/X5-F7-FTDTUHDOqLoTrIL-Jp3KaS4j2uOfpZOWq423TBk2LdT93QOotwdmkNgsshwVXHQIdBc5CzlL6g9YBnoDWb_lKOXPHHmhrEyEDobt-BLuZo23x0dBAvDWHKSovcEbtHTo7VzA=w4032-h3024" src="" alt="" />
+  <img data-src="https://lh3.googleusercontent.com/ujK7ac0mnDV9lW2psDuvvWlyfnAf5yaO1NbVlLF16q5rsXBRTKN5a9fEqLfihzn7V8oFegaW9qYXYZsrjDe9UDA3LjTmc1kdOh2ylWktbdvbKwfFi_07ErUteA6PFHbVnGCVbWTdzw=w4032-h3024" src="" alt="" />
+  <img data-src="https://lh3.googleusercontent.com/Xt7gu9fi-zlHv_CWkyzjGdIjOVAujd3o2M4e5OybXP5TR1-yLCBy7el42OXPliJ-_XJEn03Cxr77CoV008DSSMxvn-bUa9mFEN1X2-2rzCwfntnEuyoOBkrMb4EfsZZgArk0G4naKQ=w4032-h3024" src="" alt="" />
+  <img data-src="https://lh3.googleusercontent.com/T3j-8yPHVcaGKyNA2zk_jKvfPRWcnPqi-Los1yvatrF_w8e-Y7Jkrs8U-v5xroHst4Xz61LPutiDKh00TkiadoJerA-hte6KK8AdF4mwEOcCTvlSf6cLQMikyTdNzE58YgY9JXdzOg=w4032-h3024" src="" alt="" />
+  <img data-src="https://lh3.googleusercontent.com/JKuNE1QXkNDa-_2XERbI8Rm8u0nnw9djmFY-G_sJC5qced0E5jdP9Y6QsqBr_Hnx58JjTUgSo58VDBKacj4IZFJQL_amL9QktNvO44dBNfcSZsupUA6nj0y7xDMijmPwHp73AfV2Gg=w4032-h3024" src="" alt="" />
+  <img data-src="https://lh3.googleusercontent.com/5w2VFOCRpfAAZB0Q-mX3zlXZ8IqKBIvZMXOgHIrQSGGsDo52oHxv8gtI7N7gwdNGOLAwMnAUOsk7NeLV2JbOFih8SAp0gDDyD2srBIEQ7DtMIkbudZTkQDRii6SyN-M8DVksIJedpQ=w4032-h3024" src="" alt="" />
+  <img data-src="https://lh3.googleusercontent.com/4kc40t3GRfi1R1If9Kw0gEfhRWTEeHB_-uw1XRj_fjqRXGdsvqMvXGPei-PMTyVQQa9qthwnsWCKPe41IlUmA2p5xxd__RdDJRnzrsxC08r0qy18bbQB0wW6swcwtKjF6qbbW044Gg=w3024-h3024" src="" alt="" />
+  <img data-src="https://lh3.googleusercontent.com/gSfwFcLtkJMpWIw8EHeJROeaVaXpIV2zh1lRm9Q1Bv1DCwmjLSQmpwlevRjJB2z_A00fh4UeAbGVQ3wEWPhkGbfgFNA2lABt62BDDDMRucfMuzMpDLhQqj9Xs121fFJJl3v5mYJC3w=w4032-h3024" src="" alt="" />
+  <img data-src="https://lh3.googleusercontent.com/Cx3Q73MESAmpuSuMZHvD2zHIU5hjTBDSpy5RcYo5eqdzpN3M2ICvyo536_8gnlzSekcOKPYYuQuYSh-CMCfmPRBo342sqmBwIfaGRRuwrqJbWy25lQgUJohYJdEvXvLgGdcZ4dMdtg=w4032-h3024" src="" alt="" />
+  <img data-src="https://lh3.googleusercontent.com/l7ILDPIYjGkI9bvpQrzb0uvtkaoqvuBgpi4kplcdnGyyk7y0BbsEkVm0iHxOiH2VpEPRUPAG9Ploi7vJA-oxvmldZeWdXYUyXTi2suyrn-BhT8EQ_LiS5g4Iabs3zYEqw3HXZFGltA=w4032-h3024" src="" alt="" />
+  <img data-src="https://lh3.googleusercontent.com/MZlwK6bCpPKZfUpcjmdae1JK6r7IbFCc1SqDKdcCjrI2xA9p_wdRJbgGJ0p0ZQuWAARajPAmIWb8Ee15rvWHdaiYdXCsrdGysUo3UtZJsUnnLhXDBFPT0gRcyGQpWX_PE_lUeyefOQ=w4032-h3024" src="" alt="" />
+  <img data-src="https://lh3.googleusercontent.com/4N37rJoaF0BKukJAR8UnP9Sk0IIQMwnHhN3Ntvhf4kiNVqeNmFJFHvsyKfdgX7xaVC5hOGx-nhRn1peU_yGKIWurjiX8_fDdmEeu_B6XjwNa-APBSwzXqsIFzSiuXiSU7pDRohuqYg=w4032-h3024" src="" alt="" />
+  <img data-src="https://lh3.googleusercontent.com/mgsKmRiSnAm3AbfYBJGZ0eM3QWM6r81FZQthG8tacPluH4yBUaZvYdqSmguFytizbXHPut-Dbi8ZH0s59KaF1mz4y_eA6-ZcUKvmzaJeJCrCodJXYz76SBv2koY3t5N80VD76AlxkQ=w4032-h3024" src="" alt="" />
+  <img data-src="https://lh3.googleusercontent.com/fIKrEZ3QaOtWF0IJhkWZktBM2SOWB4ykZeL9Nxpaaw3JqukxP1ARlYIJkMu7iiB6ffusvWJ9d6OHcwRqYeiEOR67MHYHSdBWCTZIjoEqR10maZwi2flc0Br_fBDVN2Xkg231Mue3BA=w4032-h3024" src="" alt="" />
+  <img data-src="https://lh3.googleusercontent.com/arlPlILev9sgkjSzFawr0uks0si8PQdH7OIZvXdgXEDfyjCiaMLRhuMsvR9WoELBwuh4oIL2Y5umTM5PrCO20vbI3-OKRzf5vO49dc58vcG0o2lBrJDJTc2Hbn2zdOr0Jmhl5uuP1Q=w4032-h3024" src="" alt="" />
+  <img data-src="https://lh3.googleusercontent.com/BQLrJxBDuKQeLj4JyBhcmsqJnt1cb9okZ_jEsTg7UEgLzDlLt-wc6d5o9QaDInyrtiZIHDJwgJ529mkNhCMULxiruUMHEsZLf5U7FnBnFgmbx_5FTkqtnoEuNDzcQwcrg9zNAImMtg=w4032-h3024" src="" alt="" />
+  <img data-src="https://lh3.googleusercontent.com/yX-LSaTL7CcydbEZA828OA3SQPNTbrxZaNKItujEQPTKPtn4_nbcVrH7XZXdoGDJ8CRz7B-OTZ9Tn8xqts9Q0G9OmGfaFON1X5-gqZkBFYk1-9x3kQq7qnJDiPTmOEV9rDBJxkkLMw=w4032-h3024" src="" alt="" />
+  <img data-src="https://lh3.googleusercontent.com/nXg5m7dQx_ADQJrVLabl9u1JSPGq4erMfXmYiRgQiarz_dWl_OUi83f9EKLkiXsQrf6zSVUN82UDAa2ftbnuN7D_-X7L8YCPBWwNobuscaGL2smAEbhIyrJ-mtrg2WMjKclGeIGs9g=w4032-h3024" src="" alt="" />
+  <img data-src="https://lh3.googleusercontent.com/7U2rwXqk47ZwSQL657fKqHeRRNF5E2cj2ag1FXMluWY6JvFoN66tEkRmUwNE8zFCUDaz1sq3i1NnEEE5alF6b7YFoZR2hlh5Uk-_USOZXiiKmRdOMSjHIIoWaASydclhAJYxadcyGA=w4032-h3024" src="" alt="" />
+  <img data-src="https://lh3.googleusercontent.com/7m1nyzdrfxGD_NTPqfi50RIs5yOSB-9W9cBe4AqPm3Bfv_TLvRr_FOCBd1BzDhs-cXHxkF7aldSguM5OAnhxT5wk_ZYLFTzg7fhTQaB3UCLuiKbqVDziO_W9jeev5SeijWDu_ErcvA=w4032-h3024" src="" alt="" />
+  <img data-src="https://lh3.googleusercontent.com/w3Jv27h8VGZBcCoqkHm9wk-fSnHM7LnOo5evmY4C3Dg1XEjc1CYp8yB-E9ypQpEACUVJE9VUYMOI2b8-oNupng3sHkxV2bPzFHFMnYSSELNxKyRwEFsT6N4-kozM4hujPL5xBgLYJw=w4032-h3024" src="" alt="" />
+  <img data-src="https://lh3.googleusercontent.com/dSxOIiX_T2EDnbQ6E7Y6Cy22m1EfbF5HEAaTC4q_RVNaoZnBuoDC2cE9tu4sfjNS1UW558DVUf_I0wrijLnD7cmoSUEIus2L-qfHWP6XFdZazA1G3zV6_hG_KSYjbMdQhnGxiC7jdA=w4032-h3024" src="" alt="" />
+  <img data-src="https://lh3.googleusercontent.com/1VWwXis2bc_Gj8TiRCfd2FbMRKYn2gwzYwTWWF4D1DHbo_4udSGoOZYuncJ_AmVvgiGJOLjT4LflO-qGEB_y0_rVqtxmRO_Wk6SWS8i8oKzaXMF1bwAMIOy0-G2ePR_rWOZ8AUhczw=w4032-h3024" src="" alt="" />
+  <img data-src="https://lh3.googleusercontent.com/XWw7mc5D6gFZrshiBWPP4gU3lhxxVDZgmh-rtY9WB0z_80Y9NtBd-2JbVch6dgaJUjQUeMGIrAnA1WlKiWgFwns0MlwXKRIHhIiOIZny_J_LaTkl-mS9dwmrteSSYGGU2cwXGLRCDA=w3024-h4032" src="" alt="" />
+  <img data-src="https://lh3.googleusercontent.com/KrZfsgaWA32mJ4HoaVlkbdGhh0m9L4opUGerjTjZ1C_aXCWAEq-61g1bmGZQiNp-bRH_jBn-_slGLZIaKPHg7AMtxAfNXj2TfjMey5Ie5XbD3QfFQJ401KgTWUNgBB1ZM-vKYERfDA=w4032-h3024" src="" alt="" />
+  <img data-src="https://lh3.googleusercontent.com/OwNWPudpdFqDY828ytaL_o1ayEWbMX-d4KOq2lKX6Ew7Puuv6egiqLbdVl8_6RTgEPigfM7ccG1-XsL8EqFgRBcEdXy4ggxHqUcYRJw7bOr1vAzqAAQyd4v6joh01f8HywvS-2uxcQ=w4032-h3024" src="" alt="" />
+  <img data-src="https://lh3.googleusercontent.com/UXmTs87q7KvSi3GB_7Y7CudL7CUNeZJz8CmRHZkAFQH_2EpnWQ0JX-jdqscowaUNj88iiB009HbFnMExaGntN3_G-D2qZynAfLguncEEYdEjIKIAZrUncG7ig0plShiWoi3VPGtlRQ=w4032-h3024" src="" alt="" />
+  <img data-src="https://lh3.googleusercontent.com/L6NJjLyFnfQCyerRig_rMCLM-3ypzqGO-3vJTxUHSXiJ1PWCrtdhS5hEqYBWndISBjOcbg5OE1JQ5u0EhwrWGCHl0WefWO29a3oXhrSLsyIPXA4ncNgoAbZfdPmRKpmmFd7_0QNP2g=w4032-h3024" src="" alt="" />
+  <img data-src="https://lh3.googleusercontent.com/LCiblaHs2Dqq0BQE6Ua7jXRJI8blS-EUagI7Zl4-jBZv6Fa0ijUOIW-rlOjtd10EyJwIuwOT2yQ-DZm1l7qotKM1mZOk1Up_3hBBgYETpsubFxR49oqfGzWPrfabnBF89jYlScE62g=w4032-h3024" src="" alt="" />
+  <img data-src="https://lh3.googleusercontent.com/zwLsHBVH1pNos3LEz0vFoep8BnQBH98tGQCmAkN34Y6HRJWdlqGrVMMKZ-SrcoGWcFmASvdEw1eGaWED5Y3Pj8KF32Zj9tjKyuxPqnU-ezrhrZpMqYv1O4lrvrseeV0_CNv938eMCw=w1920-h1080" src="" alt="" />
+  <img data-src="https://lh3.googleusercontent.com/z6L_mUghvspcpDuBqGZMSUNi3xbtrN153s9N0o_EqidC4EG82giEpludRw9ZxGhJRsmFLtKJdXiMjmxk6QwfQUXTnd_b7qtCiNpfLMdQnseeVk4GtlLGY519sz71EBuOb1q3Tf9ldA=w1920-h1080" src="" alt="" />
+  <img data-src="https://lh3.googleusercontent.com/64mbeZISxdbzF68_RZKVIPj2ipjaGd08qiIvJHAF59-m7gOCoUbBj87B6oEQNR3986uG2MamDr7dZqAjJsgWcclqWQ-qNp6bOkzBNyKJcH5Q6qlO9NMy-3izqvzu7UMc4I7h_ePYeA=w4032-h3024" src="" alt="" />
+</div>
+
+
         </div>
 	      
         <div class="row">
