--- a/index.html
+++ b/index.html
@@ -88,8 +88,8 @@
           <h2>September - 8th, 2018</h2>
           <h3>NetScout Systems Inc.</h3>
           <p>178 E Tasman Dr, San Jose, CA 95134</p>
-	  <a href="https://teenhacks.hackerearth.com/" class="btn btn-default btn-lg"><i class="fa fa-eye fa-fw"></i> <span class="network-name">TeenHacks</span></a>
-          <p class="codeblock-p" style="max-width: 400px !important;">Thanks for coming to TeenHacks 2018. Follow our <a class="codeblock" href="https://www.facebook.com/teentechhacks/">Facebook</a> page for updates in 2019!</p>
+	  <a href="https://teenhacks.hackerearth.com/" class="btn btn-default btn-lg"><i class="fa fa-eye fa-fw"></i> <span class="network-name">HACKEREARTH</span></a>
+          <h3 class="codeblock-p" style="max-width: 400px !important;">Thanks for coming to TeenHacks 2018. Follow our <a class="codeblock" href="https://www.facebook.com/teentechhacks/">Facebook</a> page for updates in 2019!</h3>
 	</div>
       </div>
     </section>
