--- a/index.html
+++ b/index.html
@@ -268,7 +268,7 @@
       <div class="container">
         <div class="row">
           <div class="col-12">
-            <h1>REGISTER</h1>
+            <h1>REGISTERATION CLOSED</h1>
           </div>
         </div>
         <hr>
@@ -281,18 +281,18 @@
         </div>
         <div class="row">
           <div class="col-xs-12 col-sm-6 col-lg-3">
-            <h2><a class="sold_out" href="javasript:void;" class="link" target="_blank">Attendee SoldOut</a></h2>
+            <h2><a href="javasript:void;" class="link" target="_blank">Attendee</a></h2>
             <!--<h2><a class="sold_out" href="http://bit.ly/attendees_th18" class="link" target="_blank">Attendee SoldOut</a></h2>-->
           
 	</div>
           <div class="col-xs-12 col-sm-6 col-lg-3">
-            <h2><a href="http://bit.ly/mentor_th18" class="link" target="_blank">Mentor</a></h2>
+            <h2><a href="javasript:void;" x="http://bit.ly/mentor_th18" class="link" target="_blank">Mentor</a></h2>
           </div>
           <div class="col-xs-12 col-sm-6 col-lg-3">
-            <h2><a href="http://bit.ly/volunteer_th18" class="link" target="_blank">Volunteer</a></h2>
+            <h2><a href="javasript:void;" x="http://bit.ly/volunteer_th18" class="link" target="_blank">Volunteer</a></h2>
           </div>
           <div class="col-xs-12 col-sm-6 col-lg-3">
-            <h2><a href="http://bit.ly/judge_th18" class="link" target="_blank">Judge</a></h2>
+            <h2><a href="javasript:void;" x="http://bit.ly/judge_th18" class="link" target="_blank">Judge</a></h2>
           </div>
         </div>
 
