--- a/index.html
+++ b/index.html
@@ -78,7 +78,10 @@
      
     <section id="cover">
     <div class="row">
-      <div class="container-fluid">	      
+      <div class="container-fluid">
+	<div class="col-lg-12" style="text-align: center !important">		 	  <script src="https://www.publicalbum.org/js/pa-embed-player.min.js" async></script>
+               <a href="https://teenhacks.hackerearth.com/" class="btn btn-default btn-lg"><i class="fa fa-eye fa-fw"></i> <span class="network-name">HACKEREARTH</span></a>
+            </div>
         <div class="row">
           <img src="assets/img/teenhackslogo-best.png" id="logo"></img>
         </div>
@@ -88,8 +91,7 @@
           <h2>September - 8th, 2018</h2>
           <h3>NetScout Systems Inc.</h3>
           <p>178 E Tasman Dr, San Jose, CA 95134</p>
-	  <a href="https://teenhacks.hackerearth.com/" class="btn btn-default btn-lg"><i class="fa fa-eye fa-fw"></i> <span class="network-name">HACKEREARTH</span></a>
-          <h3 class="codeblock-p" style="max-width: 400px !important;">Thanks for coming to TeenHacks 2018. Follow our <a class="codeblock" href="https://www.facebook.com/teentechhacks/">Facebook</a> page for updates in 2019!</h3>
+	  <a href="https://www.facebook.com/teentechhacks" class="btn btn-default btn-lg"><i class="fa fa-eye fa-fw"></i> <span class="network-name">Thanks for coming to TeenHacks 2018. Follow our Facebook page for updates in 2019!</span></a>
 	</div>
       </div>
     </section>
