--- a/index.html
+++ b/index.html
@@ -270,7 +270,7 @@
       <div class="container">
         <div class="row">
           <div class="col-12">
-            <h1>REGISTERATION CLOSED</h1>
+            <h1>REGISTRATION CLOSED</h1>
           </div>
         </div>
         <hr>
