--- a/index.html
+++ b/index.html
@@ -200,14 +200,15 @@
         <div class="row">
           <div class="col-12">
             <h4>Prizes will be awarded to the best Civic Hack</h4>
-            <ul><li>The Best Overall Hack - I</li>
-           <li>The Best Overall Hack - II</li>
-           <li>The Best Overall Hack - III</li>
-           <li>The Best Overall Hack - IV</li>
+		  <ul><li>The Best Overall Hack - I (<a href="https://teenhacks.hackerearth.com/sprints/teenhacks/dashboard/174610b/submission/">Grounded</a>)</li>
+			  <li>The Best Overall Hack - II (<a href="https://teenhacks.hackerearth.com/sprints/teenhacks/dashboard/558478c/submission/">Noma</a>)</li>
+			  <li>The Best Overall Hack - III (a href="https://teenhacks.hackerearth.com/sprints/teenhacks/dashboard/1d8dc6e/submission/">Medifind</a>)</li>
+           <li>The Best Overall Hack - IV (a href="https://teenhacks.hackerearth.com/sprints/teenhacks/dashboard/">UCSS</a>)</li></li>
+	   <li>The Best Overall Hack - V (a href="https://teenhacks.hackerearth.com/sprints/teenhacks/dashboard/0d0cdcf/submission/">REMEDI</a>)</li></li>
             </ul>
             <h4>We also have special prizes for using a specific software tool.</h4>
             <h4>Special Prize</h4>
-            <ul><li>Internet Donkey Jungle in the humble Best Pitch award</li>
+            <ul><li>Internet Donkey Jungle in the humble Best Pitch award (a href="https://teenhacks.hackerearth.com/sprints/teenhacks/dashboard/">UCSS</a>)</li>
 		    <li>The Best Civic Project on .tech site</li>
           <li>The Best Civic Project using Unity3d</li>
               <li>The Best Civic project using Hasura GraphQL Engine</li></ul>
