--- a/index.html
+++ b/index.html
@@ -203,8 +203,8 @@
 		  <ul><li>The Best Overall Hack - I (<a href="https://teenhacks.hackerearth.com/sprints/teenhacks/dashboard/174610b/submission/">Grounded</a>)</li>
 			  <li>The Best Overall Hack - II (<a href="https://teenhacks.hackerearth.com/sprints/teenhacks/dashboard/558478c/submission/">Noma</a>)</li>
 			  <li>The Best Overall Hack - III (a href="https://teenhacks.hackerearth.com/sprints/teenhacks/dashboard/1d8dc6e/submission/">Medifind</a>)</li>
-           <li>The Best Overall Hack - IV (a href="https://teenhacks.hackerearth.com/sprints/teenhacks/dashboard/">UCSS</a>)</li></li>
-	   <li>The Best Overall Hack - V (a href="https://teenhacks.hackerearth.com/sprints/teenhacks/dashboard/0d0cdcf/submission/">REMEDI</a>)</li></li>
+           <li>The Best Overall Hack - IV (a href="https://teenhacks.hackerearth.com/sprints/teenhacks/dashboard/">UCSS</a>)</li>
+	   <li>The Best Overall Hack - V (a href="https://teenhacks.hackerearth.com/sprints/teenhacks/dashboard/0d0cdcf/submission/">REMEDI</a>)</li>
             </ul>
             <h4>We also have special prizes for using a specific software tool.</h4>
             <h4>Special Prize</h4>
