--- a/index.html
+++ b/index.html
@@ -180,9 +180,9 @@
           </div>
         </div>
         <hr>
-        <div class="row">
+        <!--<div class="row">
           <div class="col-12">
-                       <h3> THEMES</h3>
+             <h3> THEMES</h3>
            <h4>Hack for City</h4>  
             <h5>How can we use technology to address typical problems in big cities both local and global? Modern cities face problems related to traffic congestion, public transportation, increasing crime, assimilating immigrant populations, multi-lingual and multi-cultural issues, homelessness, drug and alcohol abuse, trash and cleanliness, emergency response during fires and other natural disasters to name a few.</h5>
 
@@ -196,10 +196,10 @@
 
         
           </div>
-        </div>
+        </div>-->
         <div class="row">
           <div class="col-12">
-            <h4>Prizes will be awarded to the best Civic Hack</h4>
+            <h4>Prizes was be awarded to the best Civic Hack</h4>
 		  <ul><li>The Best Overall Hack - I (<a href="https://teenhacks.hackerearth.com/sprints/teenhacks/dashboard/174610b/submission/">Grounded</a>)</li>
 			  <li>The Best Overall Hack - II (<a href="https://teenhacks.hackerearth.com/sprints/teenhacks/dashboard/558478c/submission/">Noma</a>)</li>
 			  <li>The Best Overall Hack - III (<a href="https://teenhacks.hackerearth.com/sprints/teenhacks/dashboard/1d8dc6e/submission/">Medifind</a>)</li>
