--- a/index.html
+++ b/index.html
@@ -79,8 +79,9 @@
     <section id="cover">
     <div class="row">
       <div class="container-fluid">
-	<div class="col-lg-12" style="text-align: center !important">		 	  <script src="https://www.publicalbum.org/js/pa-embed-player.min.js" async></script>
-               <a href="https://teenhacks.hackerearth.com/sprints/teenhacks/submissions/#submissions" class="btn btn-default btn-lg"><i class="fa fa-eye fa-fw"></i> <span class="network-name">HACKS</span></a>
+	<div class="col-lg-12" style="text-align: center !important">		 	  
+		<script src="https://www.publicalbum.org/js/pa-embed-player.min.js" async></script>
+                <a href="https://teenhacks.hackerearth.com/sprints/teenhacks/submissions/" class="btn btn-default btn-lg"><i class="fa fa-eye fa-fw"></i> <span class="network-name">HACKS</span></a>
             </div>
         <div class="row">
           <img src="assets/img/teenhackslogo-best.png" id="logo"></img>
